[package]
name = "mlkem768"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[features]
default = ["kem", "std"]
std = ["kem?/std", "rand_core/std", "sha3/std"]

[dependencies]
kem = { version = "0.2.0", optional = true }
cmov = "0.3.1"
rand_core = { version = "0.6.4", default-features = false }
sha3 = { version = "0.10.8", default-features = false }

[dev-dependencies]
divan = "0.1.11"
hex-literal = "0.4.1"
rand_chacha = "0.3.1"

[[bench]]
name = "benchmarks"
harness = false
