[package]
name = "mlkem768"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[features]
default = ["kem", "std", "xwing"]
kem = ["dep:kem"]
std = ["kem?/std", "rand_core/std", "sha3/std"]
xwing = ["x25519-dalek"]

[dependencies]
kem = { version = "0.2.0", optional = true }
cmov = "0.3.1"
rand_core = { version = "0.6.4", default-features = false }
sha3 = { version = "0.10.8", default-features = false }
x25519-dalek = { version = "2.0.1", optional = true, features = ["static_secrets"] }

[dev-dependencies]
criterion = "0.5.1"
hex-literal = "0.4.1"
rand_chacha = "0.3.1"

[[bench]]
name = "benchmarks"
harness = false
